2009-12-03  John W. Eaton  <jwe@octave.org>

	* Makefile.am (DISTCLEANFILES): New variable.

2009-11-26  Jaroslav Hajek  <highegg@gmail.com>

	* blas-xtra/sdot3.f: Use nested cache-aligned loop for general case.
	* blas-xtra/ddot3.f: Ditto.
	* blas-xtra/cdotc3.f: Ditto.
	* blas-xtra/zdotc3.f: Ditto.

2009-11-26  Jaroslav Hajek  <highegg@gmail.com>

	* blas-xtra/sdot3.f: New source.
	* blas-xtra/ddot3.f: New source.
	* blas-xtra/cdotc3.f: New source.
	* blas-xtra/zdotc3.f: New source.
	* blas-xtra/smatm3.f: New source.
	* blas-xtra/dmatm3.f: New source.
	* blas-xtra/cmatm3.f: New source.
	* blas-xtra/zmatm3.f: New source.
	* blas-xtra/module.mk: Include them.

2009-11-17  John W. Eaton  <jwe@octave.org>

	* mkf77def.in: Only process files with names that match *.f.

2009-11-13  John W. Eaton  <jwe@octave.org>

	* Makefile.am: Restore rules for building cruft.def.
	(libcruft_la_LDFLAGS): Also append @XTRA_CRUFT_SH_LDFLAGS@.
	(libcruft_la_DEPENDENCIES): New variable.
	* mkf77def.in: Use @VAR@ instead of %VAR% substitutions.
	Process	srcdir plus list of files instead of working as a filter.

2009-11-13  John W. Eaton  <jwe@octave.org>

	* Makefile.am (libcruft_la_CPPFLAGS): Define.

2009-11-10  John W. Eaton  <jwe@octave.org>

	* blas, lapack: Remove directories and all files.
	* Makefile.am: Don't include blas/module.mk or lapack/module.mk.

2009-11-10  John W. Eaton  <jwe@octave.org>

	* Makefile.am, amos/module.mk, blas-xtra/module.mk,
	blas/module.mk, daspk/module.mk, dasrt/module.mk, dassl/module.mk,
	fftpack/module.mk, lapack-xtra/module.mk, lapack/module.mk,
	misc/module.mk, odepack/module.mk, ordered-qz/module.mk,
	quadpack/module.mk, ranlib/module.mk, slatec-err/module.mk,
	slatec-fn/module.mk, villad/module.mk: New files.

	* Makefile.in, Makerules.in, amos/Makefile.in,
	blas-xtra/Makefile.in, blas/Makefile.in, daspk/Makefile.in,
	dasrt/Makefile.in, dassl/Makefile.in, fftpack/Makefile.in,
	lapack-xtra/Makefile.in, lapack/Makefile.in, misc/Makefile.in,